--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Vazir;
-  src: url("./fonts/CollectionPersianWebFont/vazir-font-v18.0.0/Vazir.ttf") format("woff2"), url("./fonts/CollectionPersianWebFont/vazir-font-v18.0.0/Vazir.ttf") format("woff"), url("./fonts/CollectionPersianWebFont/vazir-font-v18.0.0/Vazir.ttf") format("truetype"); }
+  src: url("../fonts/CollectionPersianWebFont/vazir-font-v18.0.0/Vazir.ttf") format("woff2"), url("../fonts/CollectionPersianWebFont/vazir-font-v18.0.0/Vazir.ttf") format("woff"), url("../fonts/CollectionPersianWebFont/vazir-font-v18.0.0/Vazir.ttf") format("truetype"); }
 
 * {
   box-sizing: border-box;
@@ -21,7 +21,6 @@
   html {
     font-size: 70%; } }
 
-/* Header ********************************* */
 .nav {
   display: flex;
   text-align: right;
