improve responsiveness of 3th and 4th row of the main page

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,8 @@
   transition-timing-function: ease;
   vertical-align: middle;
   margin: 1vw;
-  white-space: nowrap; }
+  white-space: nowrap;
+  color: black; }
 
 .nav a:hover {
   border-bottom: solid #1794fe;
@@ -172,9 +173,6 @@
   height: 3rem; }
 
 /* Fourth Row********************************* */
-.fourth {
-  margin: 10px; }
-
 .fourth__Header {
   color: #1794fe;
   border-right: solid green;
@@ -183,39 +181,28 @@
 .fourth__Content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  justify-content: space-between; }
+  gap: 10px; }
 
-.fourth__table {
-  padding: 1vw;
-  justify-content: space-between;
-  white-space: nowrap; }
+.fourth__options {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+  place-items: center; }
 
-.fourth__figure {
-  margin: 2.5vw;
-  justify-self: center; }
+.fourth__options img {
+  width: 10rem;
+  height: 10rem; }
 
-.fourth__figcaption {
-  padding-top: 2vw;
-  justify-self: center; }
-
-.fourth i {
-  border-radius: 5px;
-  box-shadow: 1px 1px 10px 1px #aad7ff;
-  padding: 15px;
-  font-size: 3em;
-  color: gray;
-  transition: 0.5s ease; }
-
-.fourth i:hover {
-  font-size: 3em;
-  cursor: pointer;
-  color: blue;
-  box-shadow: 1px 1px 10px 1px blue; }
+@media screen and (max-width: 648px) {
+  .fourth__options {
+    display: flex; } }
 
 .fourth__left p {
   margin: 0%;
   align-self: center;
   justify-self: center; }
+
+.fourth__lefttxt {
+  padding: 5px; }
 
 /* Fifth Row********************************* */
 .fifth {
