--- a/scss/components/_fourth.scss
+++ b/scss/components/_fourth.scss
@@ -1,7 +1,4 @@
 /* Fourth Row********************************* */
-.fourth {
-  margin: 10px;
-}
 .fourth__Header {
   color: rgb(23, 148, 254);
   border-right: solid green;
@@ -11,43 +8,32 @@
 .fourth__Content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  justify-content: space-between;
+  gap: 10px;
 }
 
-.fourth__table {
-  padding: 1vw;
-  justify-content: space-between;
-  white-space: nowrap;
+.fourth__options {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 2fr));
+  place-items: center;
 }
 
-.fourth__figure {
-  margin: 2.5vw;
-  justify-self: center;
+.fourth__options img {
+  width: 10rem;
+  height: 10rem;
 }
 
-.fourth__figcaption {
-  padding-top: 2vw;
-  justify-self: center;
-}
-
-.fourth i {
-  border-radius: 5px;
-  box-shadow: 1px 1px 10px 1px rgb(170, 215, 255);
-  padding: 15px;
-  font-size: 3em;
-  color: gray;
-  transition: 0.5s ease;
-}
-
-.fourth i:hover {
-  font-size: 3em;
-  cursor: pointer;
-  color: blue;
-  box-shadow: 1px 1px 10px 1px blue;
+@media screen and (max-width: 648px) {
+  .fourth__options {
+    display: flex;
+  }
 }
 
 .fourth__left p {
   margin: 0%;
   align-self: center;
   justify-self: center;
+}
+
+.fourth__lefttxt {
+  padding: 5px;
 }
