Skeleon is ready

--- a/css/styles.css
+++ b/css/styles.css
@@ -367,11 +367,5 @@
   .footer a {
     display: none; } }
 
-.navbar-custom button {
-  color: #1794fe;
-  background-color: lightblue;
-  border: none;
-  border-radius: 10px;
-  padding: 10px 25px;
-  width: 100%;
-  height: auto; }
+.navbarcustom {
+  color: red; }
