--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -1,9 +1,3 @@
-.navbar-custom button {
-  color: rgb(23, 148, 254);
-  background-color: lightblue;
-  border: none;
-  border-radius: 10px;
-  padding: 10px 25px;
-  width: 100%;
-  height: auto;
+.navbarcustom {
+  color: red;
 }
