Skeleton final version

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,13 @@
 
 @media screen and (min-width: 1400px) {
   html {
-    font-size: 115%; } }
+    font-size: 110%; } }
 
 @media screen and (max-width: 648px) {
   html {
-    font-size: 70%; } }
+    font-size: 80%; } }
 
-.nav {
+.mynav {
   display: flex;
   text-align: right;
   justify-content: space-between; }
@@ -30,47 +30,46 @@
   width: auto;
   height: auto; }
 
-.nav a {
+.mynav a {
   border: none;
   border-bottom: solid #ffffff;
   text-decoration: none;
-  transition: 1s;
-  transition-timing-function: ease;
+  transition: 1s ease;
   vertical-align: middle;
   margin: 1vw;
   white-space: nowrap;
   color: black; }
 
-.nav a:hover {
-  border-bottom: solid #1794fe;
-  color: #1794fe;
+.mynav a:hover {
+  border-bottom: solid dodgerblue;
+  color: dodgerblue;
   cursor: pointer; }
 
 .nav__icon {
   display: none; }
 
 @media screen and (max-width: 648px) {
-  .nav {
+  .mynav {
     display: inline; }
-  .nav a {
+  .mynav a {
     display: none; }
-  .nav a.nav__icon {
+  .mynav a.nav__icon {
     float: none;
     display: block; }
   .nav__button {
     display: none; } }
 
 @media screen and (max-width: 648px) {
-  .nav.responsive {
+  .mynav.responsive {
     position: relative; }
-  .nav.responsive .nav__icon {
+  .mynav.responsive .nav__icon {
     position: center;
     color: red; }
-  .nav.responsive a {
+  .mynav.responsive a {
     float: none;
     display: block;
     text-align: right; }
-  .nav.responsive .nav__button {
+  .mynav.responsive .nav__button {
     width: 50%;
     height: auto;
     display: block; } }
@@ -367,5 +366,41 @@
   .footer a {
     display: none; } }
 
-.navbarcustom {
-  color: red; }
+.custom-nav-large {
+  color: black;
+  border-bottom: solid #ffffff;
+  transition: 1s ease; }
+
+.custom-nav-large:hover {
+  color: dodgerblue;
+  border-bottom: solid dodgerblue; }
+
+.custom-nav-small {
+  color: black;
+  border-right: solid #ffffff;
+  transition: 1s ease; }
+
+.custom-nav-small:hover {
+  color: dodgerblue;
+  border-right: solid green;
+  text-indent: 10px; }
+
+/*  footer*********************************************  */
+.custom-footer-links a {
+  text-decoration: none;
+  color: black;
+  border-right: solid #ffffff;
+  transition: 1s ease; }
+
+.custom-footer-links a {
+  text-decoration: none;
+  color: black; }
+
+.custom-footer-links {
+  border-right: solid #ffffff;
+  transition: 1s ease; }
+
+.custom-footer-links:hover {
+  color: dodgerblue;
+  border-right: solid green;
+  text-indent: 10px; }
