--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,6 @@
 @import "./base/settings";
 @import "./base/base";
+@import "./base/common";
 @import "./components/header";
 @import "./components/second";
 @import "./components/third";
@@ -8,4 +9,3 @@
 @import "./components/sixth";
 @import "./components/seventh";
 @import "./components/footer";
-@import "./components/about";
