--- a/scss/components/index/_third.scss
+++ b/scss/components/index/_third.scss
@@ -19,6 +19,9 @@
   transform: scale(1.1) rotate(3deg);
 }
 
+.third__left {
+  align-self: center;
+}
 .third__title {
   color: rgb(23, 148, 254);
   border-right: solid green;
