--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,11 +1,11 @@
 @import "./base/settings";
 @import "./base/base";
 @import "./base/common";
-@import "./components/header";
-@import "./components/second";
-@import "./components/third";
-@import "./components/fourth";
-@import "./components/fifth";
-@import "./components/sixth";
-@import "./components/seventh";
-@import "./components/footer";
+@import "./components/index/header";
+@import "./components/index/second";
+@import "./components/index/third";
+@import "./components/index/fourth";
+@import "./components/index/fifth";
+@import "./components/index/sixth";
+@import "./components/index/seventh";
+@import "./components/index/footer";
