--- a/scss/components/index/_seventh.scss
+++ b/scss/components/index/_seventh.scss
@@ -1,9 +1,11 @@
 /* Seventh Row********************************* */
-.seventh {
-  background-color: rgb(23, 148, 254);
-}
+.index {
+  .seventh {
+    background-color: rgb(23, 148, 254);
+  }
 
-.seventh p,
-.seventh h2 {
-  color: white;
+  .seventh p,
+  .seventh h2 {
+    color: white;
+  }
 }
