--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,3 +9,4 @@
 @import "./components/index/sixth";
 @import "./components/index/seventh";
 @import "./components/index/footer";
+@import "./components/about/about";
