--- a/scss/components/index/_fourth.scss
+++ b/scss/components/index/_fourth.scss
@@ -1,21 +1,23 @@
 /* Fourth Row********************************* */
-.fourth__Header {
-  color: rgb(23, 148, 254);
-  border-right: solid green;
-  text-indent: 10px;
-}
+.index {
+  .fourth__Header {
+    color: rgb(23, 148, 254);
+    border-right: solid green;
+    text-indent: 10px;
+  }
 
-.fourth__img {
-  width: 40%;
-  height: auto;
-}
+  .fourth__img {
+    width: 40%;
+    height: auto;
+  }
 
-.fourth__left p {
-  margin: 0%;
-  align-self: center;
-  justify-self: center;
-}
+  .fourth__left p {
+    margin: 0%;
+    align-self: center;
+    justify-self: center;
+  }
 
-.fourth__lefttxt {
-  padding: 5px;
+  .fourth__lefttxt {
+    padding: 5px;
+  }
 }
