--- a/scss/components/index/_second.scss
+++ b/scss/components/index/_second.scss
@@ -1,39 +1,40 @@
 /* second Row********************************* */
+.index {
+  .second__right {
+    align-self: center;
+  }
 
-.second__right {
-  align-self: center;
-}
+  .second__title {
+    color: rgb(23, 148, 254);
+  }
+  .second__button {
+    border-radius: 5px;
+    border-color: rgb(23, 148, 254);
+    border-width: 1px;
+    color: rgb(23, 148, 254);
+    margin: 2px;
+    padding: 10px 25px;
+    background-color: white;
+  }
 
-.second__title {
-  color: rgb(23, 148, 254);
-}
-.second__button {
-  border-radius: 5px;
-  border-color: rgb(23, 148, 254);
-  border-width: 1px;
-  color: rgb(23, 148, 254);
-  margin: 2px;
-  padding: 10px 25px;
-  background-color: white;
-}
+  .second__button:hover {
+    cursor: pointer;
+    background-color: rgb(23, 148, 254);
+    color: white;
+  }
 
-.second__button:hover {
-  cursor: pointer;
-  background-color: rgb(23, 148, 254);
-  color: white;
-}
+  .second__image {
+    background-repeat: no-repeat;
+    object-fit: scale-down;
+    transition: 0.5s;
+    transition-timing-function: ease;
+    width: 100%;
+    height: auto;
+    align-items: center;
+  }
 
-.second__image {
-  background-repeat: no-repeat;
-  object-fit: scale-down;
-  transition: 0.5s;
-  transition-timing-function: ease;
-  width: 100%;
-  height: auto;
-  align-items: center;
-}
-
-.second__image:hover {
-  cursor: pointer;
-  transform: scale(1.1) rotate(-3deg);
+  .second__image:hover {
+    cursor: pointer;
+    transform: scale(1.1) rotate(-3deg);
+  }
 }
