about page version 2

--- a/scss/components/about/_about.scss
+++ b/scss/components/about/_about.scss
@@ -51,6 +51,17 @@
     color: rgb(23, 148, 254);
   }
   /*********************************************************************************/
+
+  .fifth__right {
+    border-radius: 3vw;
+    box-shadow: 1px 1px 10px 1px rgb(170, 215, 255);
+  }
+
+  .fifth__left {
+    border-radius: 3vw;
+    box-shadow: 1px 1px 10px 1px rgb(170, 215, 255);
+  }
+
   .fifth .img1 {
     width: 5.5em;
     height: auto;
