--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,14 @@
   border-top-left-radius: 20px; }
 
 /* Sixth Row********************************* */
+.index .sixth {
+  border-radius: 3vw;
+  box-shadow: 1px 1px 10px 1px #aad7ff;
+  background-image: url("../assets/Path15631.png");
+  background-repeat: no-repeat;
+  z-index: -1;
+  top: -30px; }
+
 .index .sixth h1 {
   color: #1794fe;
   border-right: solid green; }
@@ -294,7 +302,7 @@
   top: 0.5em;
   border: none;
   height: 2em;
-  width: 9em;
+  width: 7em;
   border-radius: 8px;
   background-color: #1794fe;
   font-weight: bold;
@@ -391,6 +399,12 @@
     color: white; }
   .about .fourth h3 {
     color: #1794fe; }
+  .about .fifth__right {
+    border-radius: 3vw;
+    box-shadow: 1px 1px 10px 1px #aad7ff; }
+  .about .fifth__left {
+    border-radius: 3vw;
+    box-shadow: 1px 1px 10px 1px #aad7ff; }
   .about .fifth .img1 {
     width: 5.5em;
     height: auto; }
