--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,3 +10,5 @@
 @import "./components/index/seventh";
 @import "./components/index/footer";
 @import "./components/about/about";
+@import "./components/contact/contact";
+@import "./components/faq/faq";
