--- a/css/styles.css
+++ b/css/styles.css
@@ -438,6 +438,40 @@
   .faq .fifth .card-header {
     background-color: white;
     border: none; }
+  .faq .fifth .icon {
+    align-items: right;
+    display: inline;
+    height: 100%;
+    justify-content: right;
+    margin: 0;
+    width: 100%;
+    color: blue; }
+  .faq .fifth .ham {
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    transition: transform 400ms;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none; }
+  .faq .fifth .hamRotate.active {
+    transform: rotate(45deg); }
+  .faq .fifth .hamRotate180.active {
+    transform: rotate(180deg); }
+  .faq .fifth .line {
+    fill: none;
+    transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+    stroke: blue;
+    stroke-width: 5.5;
+    stroke-linecap: round; }
+  .faq .fifth .ham1 .top {
+    stroke-dasharray: 40 139; }
+  .faq .fifth .ham1 .bottom {
+    stroke-dasharray: 40 180; }
+  .faq .fifth .ham1.active .top {
+    stroke-dashoffset: -98px; }
+  .faq .fifth .ham1.active .bottom {
+    stroke-dashoffset: -138px; }
   .faq .fifth .card-body {
     text-indent: 2vw; }
   .faq .sixth {
